--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,4 +26,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm test
       run: |
-       npm ci
+       pwd
+       ls -l
